# aude

./: Cargo.toml  README.md
assets/: syntax.txt
assets/help/: help.txt
examples/: aude.rs
src/: lib.rs  parsing.rs
