[package]
name = "aude"
version = "0.2.0"
edition = "2021"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["automatic", "differentation", "lisp", "solver", "advancedresearch"]
description = "An automated differentiation solver with a Lisp-like functional programming language"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/aude.git"
homepage = "https://github.com/advancedresearch/aude"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_meta = "2.0.1"
